# MoM-WeeklyRankings-Dashboard

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  t_matchups.py
MoM_Dashboard/: app.py  index.py
MoM_Dashboard/pages/: __init__.py  bylaws.py  drafts.py  home.py  managers.py
assets/: custom.css  matchups.css  responsive-sidebar.css  style.css  tables.css
pages/: __init__.py  bylaws.py  home.py  managers.py  matchups.py  records.py
